resolve dependency issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,8 +153,11 @@ dependencies = [
     # SWE-bench
     "swebench>=3.0.4",
 
+    # rwkv
+    "flash-linear-attention",
+
     # LM Eval
-    "lm-eval[vllm] @ git+https://github.com/EtashGuha/lm-evaluation-harness@etashg/tokenize_fix",
+    "lm-eval[vllm] @ git+https://github.com/EleutherAI/lm-evaluation-harness",
 ]
 
 [project.urls]
